# crab-scholar

./: .env.example  .gitignore  README.md  pyproject.toml
src/crab_scholar/: __init__.py  __main__.py  cli.py  config.py  export.py  llm_client.py  models.py  pipeline.py  visualize.py
src/crab_scholar/analyze/: __init__.py  analyzer.py  dimensions.py
src/crab_scholar/graph/: builder.py  knowledge_graph.py
src/crab_scholar/ingest/: __init__.py  crawler.py  fetcher.py  scholar.py
src/crab_scholar/prompts/: dataset_crafting.yaml  metrics.yaml
src/crab_scholar/viewer/: app.js  controls.html  styles.css
src/research_claw/: __init__.py  __main__.py  cli.py  config.py  export.py  models.py  pipeline.py
src/research_claw/analyze/: analyzer.py  dimensions.py
src/research_claw/graph/: __init__.py  builder.py
src/research_claw/ingest/: crawler.py  fetcher.py  scholar.py
src/research_claw/prompts/: analysis.yaml  evaluation_method.yaml  statistical_tests.yaml
tests/: conftest.py  test_config.py  test_crawler.py  test_dimensions.py  test_graph.py  test_llm_client.py  test_models.py
